-- The name of the package.
name:                odin

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            An experimental game.

-- A longer description of the package.
description:         A experimental architecture and roguelike game,
                     demonstrated as a blog series hosted at
                     http://zyghost.com/series/odin

-- URL for the project homepage or repository.
homepage:            http://zyghost.com/series/odin

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Schell Scivally

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          schell.scivally@synapsegroup.com

-- A copyright notice.
-- copyright:

category:            Development

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

library
  ghc-options:         -threaded -Wall
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     App.Control.FRP
                     , App.Control.Monad
                     , App.GUI.Button
                     , App.GUI.Picker
                     , App.GUI.TextInput
                     , App.Framework
                     , App.GUI
                     , Data.Char.FontAwesome
                     , Data.Tiled.Utils

  build-depends:       base >=4.8 && <4.9
                     , transformers >= 0.4 && < 0.5
                     , mtl >= 2.2 && < 2.3
                     , stm >= 2.4 && < 2.5
                     , async >= 2.0 && < 2.2
                     , time >= 1.5 && < 1.6
                     , containers >= 0.5 && < 0.6
                     , renderable >= 0.2 && < 0.3
                     , varying >= 0.5 && < 0.6
                     , gelatin-sdl2 >= 0.0 && < 0.1
                     , gelatin-gl >= 0.0 && < 0.1
                     , gelatin-picture >= 0.0 && < 0.1
                     , gelatin-core >= 0.0 && < 0.1
                     , sdl2 >= 2.1 && < 2.2
                     , directory >= 1.2 && < 1.3
                     , filepath >= 1.4 && < 1.5
                     , linear >= 1.20 && < 1.21
                     , FontyFruity >= 0.5.3 && < 0.6
                     , JuicyPixels >= 3.2 && < 3.3
                     , free >= 4.12 && < 4.13
                     , hashable >= 1.2 && < 1.3
                     , text >= 1.2 && < 1.3
                     , vector >= 0.11 && < 0.12
                     , htiled >= 0.1.3

executable entity
  --buildable: False
  ghc-options:         -threaded -Wall -fprof-auto -rtsopts -with-rtsopts=-N8
  hs-source-dirs:      app
  main-is:             EntityMain.hs
  build-depends:       base >=4.8 && <4.9
                     , odin
                     , varying >= 0.5 && < 0.6
                     , gelatin-core
                     , gelatin-picture
                     , gelatin-gl
                     , gelatin-sdl2

                     , freer
                     , containers
                     , transformers >= 0.4 && < 0.5
                     , mtl >= 2.2 && < 2.3
                     , vector >= 0.11 && < 0.12
                     , sdl2 >= 2.1
                     , htiled >= 0.1.3
                     , pretty-show >= 1.6

  default-language:    Haskell2010

executable sandbox
  --buildable: False
  ghc-options:         -threaded -Wall -fprof-auto -rtsopts -with-rtsopts=-N8
  hs-source-dirs:      app
  main-is:             Sandbox.hs
  build-depends:       base >=4.8 && <4.9
                     , odin
                     , varying >= 0.5 && < 0.6

                     , gelatin-core
                     , gelatin-picture
                     , gelatin-sdl2

                     , transformers >= 0.4 && < 0.5
                     , mtl >= 2.2 && < 2.3
                     , vector >= 0.11 && < 0.12
                     , sdl2 >= 2.1
                     , htiled >= 0.1.3

  default-language:    Haskell2010

executable part-two
  ghc-options:         -threaded -Wall -fprof-auto -rtsopts -with-rtsopts=-N8
  -- Directories containing source files.
  hs-source-dirs:      app

  -- .hs or .lhs file containing the Main module.
  main-is:             Part-Two.lhs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.9
                     , odin
                     , gelatin-sdl2
                     , gelatin-gl
                     , gelatin-picture
                     , gelatin-core

                     , varying >= 0.5 && < 0.6
                     , transformers >= 0.4 && < 0.5
                     , mtl >= 2.2 && < 2.3
                     , sdl2 >= 2.1

  -- Base language which the package is written in.
  default-language:    Haskell2010

executable part-one
  buildable:           False
  ghc-options:         -threaded -Wall -rtsopts -fprof-auto
  -- Directories containing source files.
  hs-source-dirs:      app

  -- .hs or .lhs file containing the Main module.
  main-is:             Part-One.lhs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.9,
                       transformers >= 0.4 && < 0.5,
                       mtl >= 2.2 && < 2.3,
                       stm >= 2.4 && < 2.5,
                       async >= 2.0 && < 2.2,
                       time >= 1.5 && < 1.6,
                       containers >= 0.5 && < 0.6,
                       renderable >= 0.2 && < 0.3,
                       varying >= 0.5 && < 0.6,
                       gelatin-glfw >= 0.0 && < 0.1,
                       directory >= 1.2 && < 1.3,
                       filepath >= 1.4 && < 1.5

  -- Base language which the package is written in.
  default-language:    Haskell2010

executable part-one-sdl2
  buildable:           False
  ghc-options:         -threaded -Wall -rtsopts -fprof-auto
  -- Directories containing source files.
  hs-source-dirs:      app

  -- .hs or .lhs file containing the Main module.
  main-is:             Part-One-SDL2.lhs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.8 && <4.9,
                       transformers >= 0.4 && < 0.5,
                       mtl >= 2.2 && < 2.3,
                       stm >= 2.4 && < 2.5,
                       async >= 2.0 && < 2.2,
                       time >= 1.5 && < 1.6,
                       containers >= 0.5 && < 0.6,
                       renderable >= 0.2 && < 0.3,
                       varying >= 0.5 && < 0.6,
                       gelatin-sdl2 >= 0.0 && < 0.1,
                       sdl2 >= 2.1 && < 2.2,
                       directory >= 1.2 && < 1.3,
                       filepath >= 1.4 && < 1.5,
                       linear >= 1.20 && < 1.21
  default-language:    Haskell2010

