-- The name of the package.
name:                odin

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            An experimental game.

-- A longer description of the package.
description:         A couple experimental game architectures and roguelike a
                     game, demonstrated as a blog series hosted at
                     http://zyghost.com/series/odin

-- URL for the project homepage or repository.
homepage:            http://zyghost.com/series/odin

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Schell Scivally

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          schell@zyghost.com

-- A copyright notice.
-- copyright:

category:            Development
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10
data-files:          assets/fonts/*.ttf
                   , assets/fonts/*.otf
                   , assets/images/*.png

--library
--  ghc-options:         -threaded -Wall
--  hs-source-dirs:      src
--  default-language:    Haskell2010
--
--  exposed-modules:     Data.Tiled.Utils
--
--  build-depends:       base >=4.8 && <5.0
--                     , containers
--                     , filepath
--                     , gelatin-sdl2
--                     , htiled
--                     , odin-engine

--executable entity
--  buildable: False
--  ghc-options:         -threaded -Wall -fprof-auto -rtsopts
--  hs-source-dirs:      app
--  main-is:             EntityMain.hs
--  --main-is:             ImmediateMode.hs
--  build-depends:       base >=4.8 && <5.0
--                     , odin
--                     , gelatin
--                     , gelatin-sdl2
--                     , gelatin-gl
--                     , gelatin-freetype2
--                     , varying
--                     , htiled >= 0.1.3
--                     , pretty-show >= 1.6
--                     , mtl
--                     , filepath
--                     , directory
--                     , linear
--                     , lens
--                     , sdl2
--                     , halive
--                     , text
--                     , containers
--
--  default-language:    Haskell2010

executable mapmaker
  ghc-options:         -Wall -threaded -fprof-auto -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             MapMaker.hs
  build-depends:       async
                     , base >=4.8 && <5.0
                     , either
                     , freer-effects
                     , gelatin-sdl2
                     , gelatin-freetype2
                     , halive
                     , hashable
                     , odin-engine
                     , varying
                     , safe >= 0.3
                     , sdl2

--executable sandbox
--  buildable: False
--  ghc-options:         -threaded -Wall -fprof-auto -rtsopts -with-rtsopts=-N8
--  hs-source-dirs:      app
--  main-is:             Sandbox.hs
--  build-depends:       base >=4.8 && <5.0
--                     , odin
--                     , varying >= 0.6
--                     , gelatin
--                     , gelatin-sdl2
--                     , transformers >= 0.4
--                     , mtl >= 2.2
--                     , vector >= 0.11
--                     , sdl2 >= 2.1
--                     , htiled >= 0.1.3
--
--  default-language:    Haskell2010
--
--executable part-two
--  buildable: False
--  ghc-options:         -threaded -Wall -fprof-auto -rtsopts -with-rtsopts=-N8
--  -- Directories containing source files.
--  hs-source-dirs:      app
--
--  -- .hs or .lhs file containing the Main module.
--  main-is:             Part-Two.lhs
--
--  -- Modules included in this executable, other than Main.
--  -- other-modules:
--
--  -- LANGUAGE extensions used by modules in this package.
--  -- other-extensions:
--
--  -- Other library packages from which modules are imported.
--  build-depends:       base >=4.8 && <5.0
--                     , odin
--                     , gelatin-sdl2
--                     , gelatin-gl
--                     , gelatin
--
--                     , varying >= 0.6
--                     , transformers >= 0.4
--                     , mtl >= 2.2
--                     , sdl2 >= 2.1
--
--  -- Base language which the package is written in.
--  default-language:    Haskell2010
--
--executable part-one-sdl2
--  buildable:           False
--  ghc-options:         -threaded -Wall -rtsopts -fprof-auto
--  -- Directories containing source files.
--  hs-source-dirs:      app
--
--  -- .hs or .lhs file containing the Main module.
--  main-is:             Part-One-SDL2.lhs
--
--  -- Modules included in this executable, other than Main.
--  -- other-modules:
--
--  -- LANGUAGE extensions used by modules in this package.
--  -- other-extensions:
--
--  -- Other library packages from which modules are imported.
--  build-depends:       base >=4.8 && <5.0
--                     , transformers >= 0.4
--                     , mtl >= 2.2
--                     , stm >= 2.4
--                     , async >= 2.0
--                     , time >= 1.5
--                     , containers >= 0.5
--                     , renderable >= 0.2.0.1
--                     , varying >= 0.6
--                     , gelatin-sdl2 >= 0.0
--                     , sdl2 >= 2.1
--                     , directory >= 1.2
--                     , filepath >= 1.4
--                     , linear >= 1.20
--  default-language:    Haskell2010
