-- The name of the package.
name:                odin

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            An experimental game.

-- A longer description of the package.
description:         A couple experimental game architectures and roguelike a
                     game, demonstrated as a blog series hosted at
                     http://zyghost.com/series/odin

-- URL for the project homepage or repository.
homepage:            http://zyghost.com/series/odin

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Schell Scivally

-- An email address to which users can send suggestions, bug reports, and
-- patches.
maintainer:          schell@zyghost.com

-- A copyright notice.
-- copyright:

category:            Development
build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
-- extra-source-files:

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10
data-files:          assets/fonts/*.ttf
                   , assets/fonts/*.otf
                   , assets/images/*.png

executable mapmaker
  ghc-options:         -Wall -threaded -fprof-auto -rtsopts -with-rtsopts=-N
  hs-source-dirs:      app
  main-is:             MapMaker.hs
  other-modules:       TmxBrowser
  build-depends:       async
                     , base >=4.8 && <5.0
                     , directory
                     , either
                     , filepath
                     , fsnotify
                     , gelatin-sdl2
                     , halive
                     , hashable
                     , htiled
                     , odin-engine
                     , pretty-show
                     , varying
                     , safe >= 0.3
                     , sdl2
                     , time
                     , yaml
